<resources>
    <string name="app_name">Traffic Light Controller</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="console">Console</string>
    <string name="manual_control">Manual Control Status</string>
    <string name="ready">Ready</string>
    <string name="main_switch">Main Switch</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
</resources>
