<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgAfk"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/console"
        android:src="@drawable/traffic_bg_none" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.333">

            <TextView android:layout_weight="0.3333" />

            <RelativeLayout
                android:id="@+id/btnPhase1"
                android:layout_height="match_parent"
                android:layout_weight="0.3333" />

            <TextView android:layout_weight="0.3333" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3333">

            <RelativeLayout
                android:id="@+id/btnPhase4"
                android:layout_height="match_parent"
                android:layout_weight="0.3333" />

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_weight="0.3333">


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnPhase3"
                android:layout_height="match_parent"
                android:layout_weight="0.3333" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3333">

            <TextView android:layout_weight="0.3333" />

            <RelativeLayout
                android:id="@+id/btnPhase2"
                android:layout_height="match_parent"
                android:layout_weight="0.3333" />

            <TextView android:layout_weight="0.3333" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageView"
        android:background="@color/bgAfkf"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_switch"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <TextView
                android:id="@+id/tvConnectionState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console"
                android:textColor="@color/white" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgAfk">

                <TextView
                    android:id="@+id/tvConsoleOutput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ready"
                    android:textColor="@color/gray" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panDeviceList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/abc_popup_background_mtrl_mult"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Paired Device"
            android:textSize="28sp" />

        <ListView
            android:id="@+id/listBTAdapterList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
